Adição de novo caso de uso 'deleteCategory'
