# src/swagger.json
@@ -310,6 +310,40 @@
 				}
 			}
 		},
+		"/categories/{id}": {
+			"delete": {
+				"tags": [
+					"Categories"
+				],
+				"summary": "Delete a category",
+				"description": "Delete a category",
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "category id",
+						"required": true,
+						"schema": {
+							"type": "string",
+							"format": "uuid"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Success"
+					},
+					"404": {
+						"description": "Category does not exists!"
+					}
+				}
+			}
+		},
 		"/categories/import": {
 			"post": {
 				"tags": [
